--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-SCAN_DIR=../../
+DEBUG=true
+
+SCAN_DIR=/home/boldyreva/data/sites
+
 EXCEPTIONS=.;..;access_log;list;.Trash-1000;.idea;.Trash-1000;lost+found
+
 ROOT_DOMAIN=loc
